created branch for repositories

--- a/TransIT.DAL/TransIT.DAL.csproj
+++ b/TransIT.DAL/TransIT.DAL.csproj
@@ -12,4 +12,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UnitOfWork\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
