--- a/TransIT.BLL/TransIT.BLL.csproj
+++ b/TransIT.BLL/TransIT.BLL.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Roka\Source\Repos\TransIT.API\TransIT.BLL\TransIT.BLL.xml</DocumentationFile>
+    <DocumentationFile>TransIT.BLL.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
