Add an access token

--- a/TransIT.API/appsettings.json
+++ b/TransIT.API/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
+  "TokenOptions": {
+    "Audience": "localhost",
+    "Issuer": "localhost",
+    "AccessTokenExpiration": 1800
+  },
   "AllowedHosts": "*"
 }
