--- a/TransIT.API/TransIT.API.csproj
+++ b/TransIT.API/TransIT.API.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation">
+      <Version>8.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="FluentValidation.AspNetCore">
+      <Version>8.2.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
