--- a/TransIT.API/appsettings.Development.json
+++ b/TransIT.API/appsettings.Development.json
@@ -6,6 +6,9 @@
       "Microsoft": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "JwtIssuerOptions": {
     "Lifetime": "5",
     "Issuer": "http://localhost:5000",
