--- a/TransIT.API/appsettings.Development.json
+++ b/TransIT.API/appsettings.Development.json
@@ -5,5 +5,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "JwtIssuerOptions": {
+    "Lifetime": "5",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
   }
 }
