Added connection string

--- a/TransIT.API/appsettings.Development.json
+++ b/TransIT.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TransITDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtIssuerOptions": {
     "Lifetime": "5",
