--- a/TransIT.API/appsettings.Development.json
+++ b/TransIT.API/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=TransITDB;persist security info=True;user id=sa;password=i.am.using.docker;"
   },
   "JwtIssuerOptions": {
     "Lifetime": "5",
