--- a/TransIT.API/appsettings.Development.json
+++ b/TransIT.API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TransITDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TransITDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection": "Server=tcp:lv-396-2-net.database.windows.net,1433;Initial Catalog=TransITDB;Persist Security Info=False;User ID=Lv-396.2.Net;Password=6eNZPc6hewU3PCMg;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "JwtIssuerOptions": {
     "Lifetime": "5",
