--- a/TransIT.API/appsettings.json
+++ b/TransIT.API/appsettings.json
@@ -4,5 +4,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TransITDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AzureConnection": "Server=tcp:lv-396-2-net.database.windows.net,1433;Initial Catalog=TransITDB;Persist Security Info=False;User ID=Lv-396.2.Net;Password=6eNZPc6hewU3PCMg;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "JwtIssuerOptions": {
+    "Lifetime": "5",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000"
+  }
 }
