--- a/TransIT.API/TransIT.API.csproj
+++ b/TransIT.API/TransIT.API.csproj
@@ -16,6 +16,9 @@
       <Version>8.2.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.OData">
+      <Version>7.1.0</Version>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
