--- a/TransIT.API/TransIT.API.csproj
+++ b/TransIT.API/TransIT.API.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OData">
       <Version>7.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
