--- a/TransIT.API/TransIT.API.csproj
+++ b/TransIT.API/TransIT.API.csproj
@@ -16,6 +16,7 @@
       <Version>8.2.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
