--- a/TransIT.API/TransIT.API.csproj
+++ b/TransIT.API/TransIT.API.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\TransIT.BLL\TransIT.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
